--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!doctype html>
-<html lang="uk">
+<html lang="pl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Warehouse — Вхід</title>
+  <title>Logowanie — Sortowanie paczek</title>
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/common.js"></script>
   <script defer src="js/auth.js"></script>
 </head>
-<body class="page-login">
-  <main class="container center-card">
-    <div class="card auth-card">
-      <div class="brand-row">
-        <div class="logo">🏋️‍♂️</div>
-        <h1>Warehouse</h1>
-      </div>
+<body class="page page-login">
+  <main class="wrap center">
+    <section class="card auth">
+      <h1 class="brand">Sortowanie paczek</h1>
+      <p class="lead">Zaloguj się, aby kontynuować.</p>
 
-      <h2>Вхід</h2>
       <form id="loginForm" class="form">
-        <label>Логін
+        <label class="field">Użytkownik
           <input id="loginUser" name="username" autocomplete="username" required />
         </label>
-        <label>Пароль
+        <label class="field">Hasło
           <input id="loginPass" name="password" type="password" autocomplete="current-password" required />
         </label>
 
-        <div class="row-between">
-          <button type="submit" class="btn primary">Увійти</button>
-          <button type="button" id="demoBtn" class="btn ghost">Демо (вхід)</button>
+        <div class="actions">
+          <button type="submit" class="btn primary">Zaloguj</button>
+          <button type="button" id="demoBtn" class="btn outline">Demo</button>
         </div>
-        <p class="muted">Це фронтенд-прототип — бекенд ще не підключений.</p>
+        <p class="muted small">Prototyp frontendowy — dane ładują się automatycznie z serwera (CSV).</p>
       </form>
-    </div>
+    </section>
   </main>
 </body>
 </html>
