--- a/pack.html
+++ b/pack.html
@@ -1,38 +1,27 @@
 <!doctype html>
-<html lang="uk">
+<html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Warehouse — Збирання</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Zbieranie — Panel</title>
   <link rel="stylesheet" href="css/styles.css">
   <script defer src="js/common.js"></script>
   <script defer src="js/pack.js"></script>
 </head>
-<body class="page-pack">
-  <header class="topbar">
-    <div class="brand">Warehouse — Збирання</div>
-    <nav class="top-actions">
-      <a href="dashboard.html" class="btn small ghost">Назад</a>
-    </nav>
+<body class="page page-pack">
+  <header class="header thin">
+    <div class="container">
+      <div class="site-title">Zbieranie — listy</div>
+      <div class="nav-right">
+        <a href="dashboard.html" class="btn ghost">Powrót</a>
+      </div>
+    </div>
   </header>
 
-  <main class="container grid-2">
+  <main class="container">
     <section class="card">
-      <h2>Ваші завдання</h2>
-      <p class="muted">Список picklist'ів, призначених вам.</p>
-      <ul id="tasksList" class="list"></ul>
-      <div class="controls">
-        <button id="refreshTasks" class="btn">Оновити</button>
-      </div>
-    </section>
-
-    <section id="taskDetails" class="card hidden">
-      <h3>Деталі завдання</h3>
-      <div id="taskInfo"></div>
-      <div class="row-between">
-        <button id="markPicked" class="btn primary">Позначити як зібране</button>
-        <button id="markPartial" class="btn ghost">Частково</button>
-      </div>
+      <h3>Aktywne listy zbiórki</h3>
+      <div id="picklistsContainer"></div>
     </section>
   </main>
 </body>
